<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.ezaf.www.citisci.utils.viewmodel.MyExperimentsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/myExp_progressRect"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:background="@color/progressColor"
            app:layout_constraintStart_toStartOf="@+id/myExp_samplesAcquired"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myExp_expName"
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:hint="@string/experiment_name"
            android:paddingTop="22dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/myExp_expProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/exp_percentage_completed"

            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/myExp_previewResearcherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/exp_researcher"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/myExp_expType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:paddingTop="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/myExp_sensorType1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/myExp_expName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            app:layout_constraintVertical_bias="1.0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/myExp_sensorType2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/myExp_expName"
            app:layout_constraintEnd_toStartOf="@+id/myExp_sensorType1"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            app:layout_constraintVertical_bias="1.0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/myExp_sensorType3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/myExp_expName"
            app:layout_constraintEnd_toStartOf="@+id/myExp_sensorType2"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            app:layout_constraintVertical_bias="1.0"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <ImageView
            android:id="@+id/myExp_sensorType4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:adjustViewBounds="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/myExp_expName"
            app:layout_constraintEnd_toStartOf="@+id/myExp_sensorType2"
            app:layout_constraintHorizontal_bias="0.959"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <TextView
            android:id="@+id/myExp_samplesAcquired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/samples_acquired"
            android:text="@{viewModel.samplesAcquired}"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/myExp_expName"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
